prod_snapshot_2015-09-24_1030/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <controllingField>Type_of_Opportunity__c</controllingField>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Future_Feature_Date__c</fullName>
        <label>First Future Feature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Scheduled_Delivery_Date__c</fullName>
        <label>First Scheduled Delivery Date</label>
        <summarizedField>OpportunityLineItem.ServiceDate</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Waiting_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Focus_A_L__c</fullName>
        <label>Focus A-L</label>
        <picklist>
            <picklistValues>
                <fullName>Acupuncture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Duct Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baby Supply Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bagels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar &amp; Grill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bikes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafe &amp; Bistro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Focus_M_Y__c</fullName>
        <label>Focus M-Y</label>
        <picklist>
            <picklistValues>
                <fullName>Maid Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martial Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meal Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mediterranean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican &amp; Latin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie &amp; Video Game Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mufflers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orchard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthodontics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Decor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Party Supplies</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>From_Rep__c</fullName>
        <label>From Rep</label>
        <picklist>
            <controllingField>Transferred_Deal__c</controllingField>
            <picklistValues>
                <fullName>Aaron Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amanda Schesser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea Galvarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Kapeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Barendrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blake Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandon Ragsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Travis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brittany Hays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlos Valadez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carole Kaufman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Chambers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Alvarez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Andrews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominique Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drew Dippold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Bolger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeffrey Pressly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenifer Brandstetter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Gordon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kim Archer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lashonte Scott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynda Ragsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynne Gabrielson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Baginski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meg Zucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neil Hicks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicole Ostrofe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oliver Jacobsen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GEC_Completed_Time__c</fullName>
        <label>GEC Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GEC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Goals Expectations Call</inlineHelpText>
        <label>GEC Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Assist_Call_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GO Assist Call Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Assist_Date_Time__c</fullName>
        <label>GO Assist Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GL_Assist_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Assist Rep #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities18y0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Assisting_Rep_2_Email__c</fullName>
        <label>GO Assist Rep #2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GL_Assisting_Rep_Email__c</fullName>
        <description>The email address of the rep specified in GO Assist Rep #1 field or The knowledge team&apos;s email address.</description>
        <label>GO Assist Rep #1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GL_Assisting_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Assist Rep #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Calender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO Calender</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gannett_Market_Id__c</fullName>
        <formula>Gannett_Market__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gannett Market Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gannett_Market_Type__c</fullName>
        <formula>IF(Gannett_Market__r.Active_BC__c,&quot;Broadcast&quot;,IF( Gannett_Market__r.Active_CP__c,&quot;Print&quot;, IF(Gannett_Market__r.Active_DC__c,&quot;DealChicken&quot;,&quot;Market Unknown&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gannett Market Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gannett_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gannett Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>GL Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male &amp; Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Genesys_Account_Number__c</fullName>
        <label>Genesys Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_First_Appoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has First Appoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headline_Focus__c</fullName>
        <label>Headline Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hold_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not payment is to be withheld, please indicate as to why.</inlineHelpText>
        <label>Hold Payment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Seasons__c</fullName>
        <label>Hot Seasons</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decembe</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Approval__c</fullName>
        <formula>(Time_Frame__c -  Track_Date_Approved_Signed__c) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inbound_Call_Source__c</fullName>
        <label>Inbound Call Source</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Include_Address_in_Ads__c</fullName>
        <inlineHelpText>Choose whether or not the Company address needs to be included in advertising for this Opportunity. Most customers without actual store fronts choose not to include their address.</inlineHelpText>
        <label>Include Address in Ads</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_General_Acct__c</fullName>
        <formula>TEXT(Account.Industry_General__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry General (Acct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_General__c</fullName>
        <label>Industry General</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Specific__c</fullName>
        <label>Industry Specific</label>
        <picklist>
            <controllingField>Industry_General__c</controllingField>
            <picklistValues>
                <fullName>Aerospace/Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assisted Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing/Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Trade Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collegiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment/Pawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care/Pre-School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_OrderNumber__c</fullName>
        <label>Invoice Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRenewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Opportunity has already been renewed</description>
        <inlineHelpText>Check if the Opportunity has been renewed</inlineHelpText>
        <label>Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Time_To_Close__c</fullName>
        <label>KPI - Time To Close</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSBD__c</fullName>
        <formula>Last_Schedule_Bill_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSBD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the most recently added activity.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Mod_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Mod By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Mod_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Last Mod Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Schedule_Bill_Date__c</fullName>
        <label>Last Schedule Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Age__c</fullName>
        <description>TODAY() - DATEVALUE(Last_Touch_Date__c)</description>
        <formula>TODAY() - Last_Touch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Date__c</fullName>
        <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate) , LastActivityDate, DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Touch__c</fullName>
        <description>Current time - last activity performed</description>
        <formula>NOW() - Last_Activity_Datetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Touch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The User selected for Lead Gen Rep must be in the &apos;Lead Generation Specialists&apos; Profile. Please use the &apos;Lead Gen Rep Lookup&apos; icon to the right of the field to search for allowed Users.</inlineHelpText>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Text__c</fullName>
        <inlineHelpText>Value imported from Lead Source Detail Text on the Lead</inlineHelpText>
        <label>Lead Source Detail Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Better Business Bureau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CitySearchBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Valley Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewTimesBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhoenixMagBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeleMatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellowpages.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YellowPagesBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YelpBPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest Dental Conference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Sourced_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Sourced By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesrfMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Type_Assignment__c</fullName>
        <label>Lead Type Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>TAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Biz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonYP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Indicates whether the deal is a Gold or Platinum Opportunity.</description>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>